--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "homepage": "https://github.com/AnyMoeNFT/contract#readme",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-truffle5": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "dotenv": "^10.0.0",
+    "ethereum-waffle": "^3.4.0",
     "hardhat": "^2.6.7",
     "web3": "^1.6.0"
   },
