--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Contracts for project AnyMoe",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "hardhat compile"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,10 @@
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
-    "hardhat": "^2.6.7",
-    "web3": "^1.6.0"
+    "hardhat": "^2.6.8",
+    "web3": "^1.6.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.2"
+    "@openzeppelin/contracts": "^4.3.3"
   }
 }
