--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "anymoe-contract",
-  "version": "0.0.1",
+  "name": "@anymoe/contracts",
+  "version": "0.1.0",
   "description": "Contracts for project AnyMoe",
   "scripts": {
-    "compile": "hardhat compile"
+    "compile": "hardhat compile && abi-types-generator hardhat"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "dotenv": "^10.0.0",
+    "ethereum-abi-types-generator": "^1.3.2",
     "ethereum-waffle": "^3.4.0",
     "hardhat": "^2.6.8",
     "web3": "^1.6.1"
