--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "dotenv": "^10.0.0",
     "ethereum-abi-types-generator": "^1.3.2",
     "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
     "web3": "^1.6.1"
   },
